--- a/src/main/resources/hockeyapp/HockeyappRecorder/help-apiToken.html
+++ b/src/main/resources/hockeyapp/HockeyappRecorder/help-apiToken.html
@@ -1,9 +1,9 @@
 <div>
-Your HockeyApp API token.<br/>
-Can be generated in your HockeyApp account settings.<br/>
+Your HockeyApp API Token.<br/>
+Can be <a href="https://rink.hockeyapp.net/manage/auth_tokens">generated</a> in your HockeyApp account settings.<br/>
 You need to create a token with full access if you mark your releases as be available for download as soon as they're uploaded.
 </div>
 
 <div>
-    <i>When left undefined it uses globally visible Default API Token.</i>
+    <i>When left undefined it uses the globally visible Default API Token.</i>
 </div>
