Updated help files.

--- a/src/main/resources/hockeyapp/HockeyappRecorder/help-apiToken.html
+++ b/src/main/resources/hockeyapp/HockeyappRecorder/help-apiToken.html
@@ -5,5 +5,5 @@ You need to create a token with full access if you mark your releases as be avai
 </div>
 
 <div>
-    <i>When left undefined it uses the globally visible Default API Token.</i>
+    <i>When left undefined and a global API Token is defined, the latter one is used.</i>
 </div>
